tests/positive/pr1113a_sum_construction.safe
package pr1113a_sum_construction

   type shape is circle (radius : integer) or label (text : string) or idle

   function keep (value : shape) returns shape
      return value

   function same (left : shape; right : shape) returns boolean
      return left == right

   current : shape = circle (5)
   named : shape = label ("ok")
   empty : shape = idle
   copied : shape = keep (current)

   if same (copied, circle (5))
      if same (named, label ("ok")) and then same (empty, idle)
         print (1)
      else
         print (0)
   else
      print (0)
