tests/negative/neg_pr1113a_payload_grouped_names.safe
package neg_pr1113a_payload_grouped_names

   type shape is line (left, right : integer) or idle;
